(WIP) Making Docker containers Modular